# basicGUI

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  install.sh
docs/: docs.md
examples/: makefile  test.cpp
include/: basic.hpp  basicAudio.hpp  basicBackground.hpp  basicButton.hpp  basicGUI.hpp  basicImage.hpp  basicInput.hpp  basicLog.hpp  basicText.hpp  basicWindow.hpp  glad.h  shader.h
src/: basic.cpp  basicAudio.cpp  basicBackground.cpp  basicButton.cpp  basicImage.cpp  basicInput.cpp  basicLog.cpp  basicText.cpp  basicWindow.cpp  glad.cpp
